Made links open in new tabs

--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@
         <!-- Footer Social Icons-->
         <div class="col-lg-6 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/gabormajerszky">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/gabormajerszky" target="_blank">
             <i class="fab fa-fw fa-github"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="linkedin.com/in/gabor-majerszky-8b237813a">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/gabor-majerszky-8b237813a"
+            target="_blank">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
         </div>
@@ -289,9 +290,11 @@
                   or deleted. The front end is written in JavaScript, using React with Material-UI. The back end API is
                   written in Java with the Spring framework and connects to a PostgreSQL database.
                 </p>
-                <a class="btn btn-primary" href="https://easynote.cc/">Website</a>
-                <a class="btn btn-primary" href="https://github.com/gabormajerszky/easynote.cc">Front end source</a>
-                <a class="btn btn-primary" href="https://github.com/gabormajerszky/easynote-api">Back end source</a>
+                <a class="btn btn-primary" href="https://easynote.cc/" target="_blank">Website</a>
+                <a class="btn btn-primary" href="https://github.com/gabormajerszky/easynote.cc" target="_blank">Front
+                  end source</a>
+                <a class="btn btn-primary" href="https://github.com/gabormajerszky/easynote-api" target="_blank">Back
+                  end source</a>
               </div>
             </div>
           </div>
@@ -328,8 +331,9 @@
                 <p class="mb-5">
                   This is a business website of a Hungarian dog trainer. Written in PHP, JavaScript and pure CSS.
                 </p>
-                <a class="btn btn-primary" href="https://majerszkydogs.hu/">Website</a>
-                <a class="btn btn-primary" href="https://github.com/gabormajerszky/majerszkydogs.hu">Source</a>
+                <a class="btn btn-primary" href="https://majerszkydogs.hu/" target="_blank">Website</a>
+                <a class="btn btn-primary" href="https://github.com/gabormajerszky/majerszkydogs.hu"
+                  target="_blank">Source</a>
               </div>
             </div>
           </div>
@@ -367,8 +371,9 @@
                   This is a personal site with my own music collection. Uses PHP to generate the playlist from the music
                   files on the server, and JavaScript to handle the player.
                 </p>
-                <a class="btn btn-primary" href="https://maniacfish.com/music/">Website</a>
-                <a class="btn btn-primary" href="https://github.com/gabormajerszky/maniacfish.com/tree/master/music">
+                <a class="btn btn-primary" href="https://maniacfish.com/music/" target="_blank">Website</a>
+                <a class="btn btn-primary" href="https://github.com/gabormajerszky/maniacfish.com/tree/master/music"
+                  target="_blank">
                   Source
                 </a>
               </div>
@@ -408,9 +413,9 @@
                   This is a very simple site that lets you calculate your net worth over time based on some simple
                   assumptions. Uses only HTML, CSS, JavaScript and the Chart.js library.
                 </p>
-                <a class="btn btn-primary" href="https://maniacfish.com/stocksvsproperty/">Website</a>
+                <a class="btn btn-primary" href="https://maniacfish.com/stocksvsproperty/" target="_blank">Website</a>
                 <a class="btn btn-primary"
-                  href="https://github.com/gabormajerszky/maniacfish.com/tree/master/stocksvsproperty">
+                  href="https://github.com/gabormajerszky/maniacfish.com/tree/master/stocksvsproperty" target="_blank">
                   Source
                 </a>
               </div>
@@ -450,8 +455,10 @@
                   This is a mobile puzzle game for Android. Written in C# using Unity.
                 </p>
                 <a class="btn btn-primary"
-                  href="https://play.google.com/store/apps/details?id=com.PuzzleFactory.Transition">Website</a>
-                <a class="btn btn-primary" href="https://github.com/gabormajerszky/blockdoku">
+                  href="https://play.google.com/store/apps/details?id=com.PuzzleFactory.Transition" target="_blank">
+                  Play Store
+                </a>
+                <a class="btn btn-primary" href="https://github.com/gabormajerszky/blockdoku" target="_blank">
                   Source
                 </a>
               </div>
