Fix links to maniacfish.com

--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
                   This is a very simple site that lets you calculate your net worth over time based on some simple
                   assumptions. Uses only HTML, CSS, JavaScript and the Chart.js library.
                 </p>
-                <a class="btn btn-primary" href="https://maniacfish.com/stocksvsproperty/" target="_blank">Website</a>
+                <a class="btn btn-primary" href="https://maniacfish.com/stocks-vs-property/" target="_blank">Website</a>
                 <a class="btn btn-primary"
-                  href="https://github.com/gabormajerszky/maniacfish.com/tree/master/stocksvsproperty" target="_blank">
+                  href="https://github.com/gabormajerszky/maniacfish.com/tree/master/stocks-vs-property" target="_blank">
                   Source
                 </a>
               </div>
